# sshtui

./: .gitignore  Cargo.toml  HOMEBREW.md  LICENSE  README.md  SECURITY.md  example_config
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
Formula/: sshtui.rb
docs/: MACOS_SIGNING.md
src/: config.rs  main.rs
